--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,6 @@
-bcrypt==5.0.0
-blinker==1.9.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
-Flask==3.1.2
-flask-cors==6.0.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-requests==2.32.5
-urllib3==2.5.0
-Werkzeug==3.1.3
-sendgrid==6.11.0
+Flask==2.3.3
+Flask-CORS==4.0.0
 Flask-SQLAlchemy==3.0.5
 psycopg2==2.9.9
+bcrypt==4.0.1
+sendgrid==6.10.0
